--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -12,25 +12,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: getorg in /home/vm/anaconda3/lib/python3.5/site-packages\n",
-      "Requirement already up-to-date: geopy in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: retrying in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: pygithub in /home/vm/anaconda3/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: six>=1.7.0 in /home/vm/.local/lib/python3.5/site-packages (from retrying->getorg)\n",
+      "Collecting getorg\n",
+      "  Using cached getorg-0.3.1-py2.py3-none-any.whl\n",
+      "Collecting pygithub (from getorg)\n",
+      "Collecting geopy (from getorg)\n",
+      "  Using cached geopy-1.11.0-py2.py3-none-any.whl\n",
+      "Collecting retrying (from getorg)\n",
+      "Collecting pyjwt (from pygithub->getorg)\n",
+      "  Using cached PyJWT-1.5.3-py2.py3-none-any.whl\n",
+      "Collecting six>=1.7.0 (from retrying->getorg)\n",
+      "  Using cached six-1.11.0-py2.py3-none-any.whl\n",
+      "Installing collected packages: pyjwt, pygithub, geopy, six, retrying, getorg\n",
+      "Successfully installed geopy-1.11.0 getorg-0.3.1 pygithub-1.35 pyjwt-1.5.3 retrying-1.3.3 six-1.11.0\n",
+      "\u001b[33mYou are using pip version 8.1.1, however version 9.0.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "IPywidgets and ipyleaflet support enabled.\n"
      ]
     }
    ],
    "source": [
-    "!pip install getorg --upgrade\n",
+    "!pip3 install getorg --upgrade\n",
     "import glob\n",
     "import getorg\n",
     "from geopy import Nominatim"
@@ -38,21 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "g = glob.glob(\"*.md\")"
+    "g = glob.glob(\"_talks/*.md\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "geocoder = Nominatim()\n",
@@ -64,23 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berkeley CA, USA \n",
-      " Berkeley, Alameda County, California, United States of America\n",
-      "Los Angeles, CA \n",
-      " LA, Los Angeles County, California, United States of America\n",
-      "London, UK \n",
+      "Biddeford, ME, United States of America \n",
+      " Biddeford, York County, Maine, United States of America\n",
+      "Groningen, The Netherlands \n",
+      " Groningen, Nederland\n",
+      "Heraklion, Greece \n",
+      " Ηράκλειο, Δήμος Ηρακλείου, Περιφερειακή Ενότητα Ηρακλείου, Περιφέρεια Κρήτης, Κρήτη, 71201, Ελλάδα\n",
+      "London, United Kingdom \n",
       " London, Greater London, England, UK\n",
-      "San Francisco, California \n",
-      " SF, California, United States of America\n"
+      "Liverpool, United Kingdom \n",
+      " Liverpool, North West England, England, UK\n",
+      "Mytilene, Greece \n",
+      " Μυτιλήνη, Δήμος Λέσβου, Περιφερειακή Ενότητα Λέσβου, Περιφέρεια Βόρειου Αιγαίου, 81100, Ελλάδα\n",
+      "Košice, Slovakia \n",
+      " Košice, Košický kraj, Východné Slovensko, 04151, Slovensko\n",
+      "Athens, Greece \n",
+      " Αθήνα, Δήμος Αθηναίων, Π.Ε. Κεντρικού Τομέα Αθηνών, Περιφέρεια Αττικής, Αττική, 10431, Ελλάδα\n"
      ]
     }
    ],
@@ -102,25 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Written map to ../talkmap/'"
+       "'Written map to talkmap/'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m = getorg.orgmap.create_map_obj()\n",
-    "getorg.orgmap.output_html_cluster_map(location_dict, folder_name=\"../talkmap\", hashed_usernames=False)"
+    "getorg.orgmap.output_html_cluster_map(location_dict, folder_name=\"talkmap\", hashed_usernames=False)"
    ]
   },
   {
@@ -136,9 +143,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -154,5 +161,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
