--- a/bibtex/5_Use_and_misuse_of_temperature.bib
+++ b/bibtex/5_Use_and_misuse_of_temperature.bib
@@ -1,8 +1,9 @@
 @article{Kontopoulos2017Use,
   title={Use and misuse of temperature normalisation in meta-analyses of thermal responses of biological traits},
-  author={Kontopoulos, Dimitrios-Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P and Pawar, Samraat},
+  author={Kontopoulos, Dimitrios - Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P and Pawar, Samraat},
   journal={{PeerJ Preprints}},
   volume={5},
   pages={e3068v1},
-  publisher={PeerJ Inc. San Francisco, USA}
+  publisher={PeerJ Inc. San Francisco, USA},
+  year={2017}
 }
