Added the B0 paper which was published today! :tada:

--- a/bibtex/6_Use_and_misuse_of_temperature.bib
+++ b/bibtex/6_Use_and_misuse_of_temperature.bib
@@ -1,9 +1,12 @@
-@article{Kontopoulos2017Use,
-  title={Use and misuse of temperature normalisation in meta-analyses of thermal responses of biological traits},
-  author={Kontopoulos, Dimitrios - Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P and Pawar, Samraat},
-  journal={{PeerJ Preprints}},
-  volume={5},
-  pages={e3068v1},
-  publisher={PeerJ Inc. San Francisco, USA},
-  year={2017}
+@article{10.7717/peerj.4363,
+ title = {Use and misuse of temperature normalisation in meta-analyses of thermal responses of biological traits},
+ author = {{Kontopoulos, Dimitrios - Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P. and Pawar, Samraat}},
+ year = 2018,
+ keywords = {Sharpe-Schoolfield, Thermal response, Physiology, Temperature},
+ volume = 6,
+ pages = {e4363},
+ journal = {{PeerJ}},
+ issn = {2167-8359},
+ url = {https://doi.org/10.7717/peerj.4363},
+ doi = {10.7717/peerj.4363}
 }
