Fixed a bibtex file.

--- a/bibtex/6_Use_and_misuse_of_temperature.bib
+++ b/bibtex/6_Use_and_misuse_of_temperature.bib
@@ -1,6 +1,6 @@
 @article{10.7717/peerj.4363,
  title = {Use and misuse of temperature normalisation in meta-analyses of thermal responses of biological traits},
- author = {{Kontopoulos, Dimitrios - Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P. and Pawar, Samraat}},
+ author = {Kontopoulos, Dimitrios - Georgios and Garc{\'\i}a-Carreras, Bernardo and Sal, Sof{\'\i}a and Smith, Thomas P. and Pawar, Samraat},
  year = 2018,
  keywords = {Sharpe-Schoolfield, Thermal response, Physiology, Temperature},
  volume = 6,
