--- a/bibtex/4_Structuprint.bib
+++ b/bibtex/4_Structuprint.bib
@@ -1,5 +1,5 @@
 @article{Kontopoulos2016Structuprint,
-  title={Structuprint: a scalable and extensible tool for two-dimensional representation of protein surfaces},
+  title={Structuprint: a scalable and XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXx surfaces},
   author={Kontopoulos, Dimitrios Georgios and Vlachakis, Dimitrios and Tsiliki, Georgia and Kossida, Sofia},
   journal={{BMC Structural Biology}},
   volume={16},
